--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ src="jpg ヘアカタログ 4.jpg" class="ヘア1">
 <img
 src="jpg ヘアカタログ 3.JPG" class="ヘア2"> 
 <img
-src="jpg ヘアカタログ 3.JPG"> class="ヘア3">  
+src="jpg ヘアカタログ 3.JPG" class="ヘア3">  
 　<!--   -->　 
 </div> 
 <div class="子2">
