--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="祖">
  　　           <div class="bar">
-                                 <p><a href="https://be11be11.github.io/HP-6/">top</a></p>
+                                 <p><a href="https://be11be11.github.io/HP-7/">top</a></p>
                                  <p><a href="#menu">menu</a></p>
                                  <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a></p>
                 </div>  
@@ -39,24 +39,23 @@
                                  <div class="店内2"><img src="jpg 店内 image 2.JPG" alt=""></div>
 　         　　 </div>
 
-　　　　        <div class="親3">  
+<div class="親3">
 <div class="テキスト">hair catalog</div>
-<div class="子1">  
+<div class="子">  
 <img 
 src="jpg ヘアカタログ 4.jpg" class="ヘア1">
 <img
 src="jpg ヘアカタログ 3.JPG" class="ヘア2"> 
 <img
-src="jpg ヘアカタログ 3.JPG" class="ヘア3">  
+src="jpg ヘアカタログ 3.JPG"class="ヘア3">
 　<!--   -->　 
-</div>              
-<div class="子2">
+</div> 
+<div class="子">
 <img
 src="jpg ヘアカタログ 1.JPG" class="ヘア4">
 <img
 src="jpg ヘアカタログ 2.jpg" class="ヘア5">   
 </div>
-　          　　</div>
    
 　　　　        <div class="親3"> 
                                 <a id="menu"></a>
