--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div class="親3">
 <div class="テキスト">hair catalog</div>
-<div class="子">  
+<div class="子1">  
 <img 
 src="jpg ヘアカタログ 4.jpg" class="ヘア1">
 <img
@@ -50,7 +50,7 @@ src="jpg ヘアカタログ 3.JPG" class="ヘア2">
 src="jpg ヘアカタログ 3.JPG"class="ヘア3">
 　<!--   -->　 
 </div> 
-<div class="子">
+<div class="子2">
 <img
 src="jpg ヘアカタログ 1.JPG" class="ヘア4">
 <img
